--- a/src/sass/blocks/_about.scss
+++ b/src/sass/blocks/_about.scss
@@ -21,6 +21,9 @@
         width: 410px;
         height: 550px;
         background: #fff;
+        img {
+            width: 100%;
+        }
     }
     &__descr {
         margin: 60px 0 0 108px;
