--- a/src/sass/blocks/_social.scss
+++ b/src/sass/blocks/_social.scss
@@ -1,5 +1,18 @@
 .social {
     display: flex;
+    &_contacts {
+        position: relative;
+        &:after {
+            content: '';
+            display: block;
+            width: 97px;
+            height: 129px;
+            position:absolute;
+            top: -65%;
+            left: 37%;
+            background: url(../icons/feed_arrow2.svg) center (center/cover) no-repeat;
+        }
+    }
     &__item {
         width: 22px;
         margin-right: 24px;
@@ -9,5 +22,10 @@
         img {
             width: 100%;
         }
-    }
+        &_contacts {
+            width: 35px;
+            margin-right: 30px;
+        }
+        
+    }    
 }
