--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -23,3 +23,6 @@
 @import 'blocks/portfolio';
 @import 'blocks/advantages';
 @import 'blocks/feedback';
+@import 'blocks/price';
+@import 'blocks/contacts';
+@import 'blocks/footer';
