--- a/src/sass/blocks/_advantages.scss
+++ b/src/sass/blocks/_advantages.scss
@@ -41,9 +41,11 @@
     &__icon {
         position: absolute;
         z-index: 1;
-        transform: translateX(-50%);
+        transform: translateX(-55%);
     }
     &__descr {
+        font-size: 16px;
+        line-height: 20px;
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
