--- a/src/sass/blocks/_portfolio.scss
+++ b/src/sass/blocks/_portfolio.scss
@@ -55,6 +55,10 @@ div.portfolio__content {
         grid-auto-rows: minmax(79px, auto) minmax(279px, auto);
         gap: 15px;
         .portfolio__item {
+            transition: 0.6s all;
+            &:hover {
+                transform: scale(1.1);
+            }
             img {
                 width: 100%;
             }
@@ -105,6 +109,10 @@ div.portfolio__content {
         grid-auto-rows: minmax(192, auto);
         gap: 15px;
         .portfolio__item {
+            transition: 0.6s all;
+            &:hover {
+                transform: scale(1.1);
+            }
             img {
                 width: 100%;
             }
@@ -147,6 +155,10 @@ div.portfolio__content {
         grid-auto-rows: repeat(4, minmax(192, auto));
         gap: 15px;
         .portfolio__item {
+            transition: 0.6s all;
+            &:hover {
+                transform: scale(1.1);
+            }
             img {
                 width: 100%;
             }
